--- a/draw_houyi/Net27/Net27.tex
+++ b/draw_houyi/Net27/Net27.tex
@@ -540,8 +540,8 @@
         xlabel=1,
         ylabel=1,
         zlabel=16,
-        fill=\FcColor,
-        bandfill=\FcReluColor,
+        fill=\FcFineColor,
+        bandfill=\FcReluFineColor,
         height=5,
         width=5,
         depth=16
